@@ -1,3 +1,11 @@
+2006-12-18  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-details.c:
+	* theme-properties.glade:
+
+	- HIG fixes to the color scheme tab, from suggestions in Bug 382517
+	- Rename "Theme Details" button to "Customize"
+
 2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-theme-manager.c: (meta_theme_selection_changed):
